sidebar fixes per change request except sidebar overflow

--- a/src/css/sidebar.css
+++ b/src/css/sidebar.css
@@ -7,6 +7,7 @@
 .sidebar-container {
     display:flex;
     flex-direction: column;
+    justify-content: space-between;
     height: 100%;
     background-color: white;
     z-index: 2;
